# Home-Station

./: README.md  docker-compose.yml
docker/caddy/: Caddyfile
docker/mosquitto/config/: mosquitto.conf  passwords.txt
docker/mosquitto/config/certs/: 0966307-ubuntu.crt  0966307-ubuntu.csr  0966307-ubuntu.key  ca.crt  ca.key  generate-CA.sh  vivobook.crt  (+3 more)
docker/postgres/: init_setup.sql
webapp/mysite/mysite/: settings.py  urls.py
webapp/weather_station/: Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
webapp/weather_station/dashboard/: .urls.py.swp  admin.py  consumers.py  forms.py  models.py  routing.py  serializers.py  urls.py  views.py
webapp/weather_station/dashboard/migrations/: 0001_initial.py  0002_alter_weather_time.py  0002_remove_weather_humidity_and_more.py  0003_weather_user_weather_weather_station.py
webapp/weather_station/dashboard/static/dashboard/: .script.js.swp  script.js  style.css
webapp/weather_station/dashboard/templates/dashboard/: index2.html
webapp/weather_station/map/: admin.py  consumers.py  forms.py  models.py  routing.py  serializers.py  urls.py  views.py
webapp/weather_station/map/migrations/: 0001_initial.py  0002_alter_weather_stations_user.py  0002_weather_stations_user.py  0003_weather.py
webapp/weather_station/map/static/: pureknob.js  script.js  style.css
webapp/weather_station/map/templates/: index.html  stations.html
webapp/weather_station/map/templates/registration/: login.html  signup.html
webapp/weather_station/weather_station/: asgi.py  settings.py  urls.py  wsgi.py
(+5 files in other folders)
