[tool.poetry]
name = "weather-station"
version = "0.1.0"
description = ""
authors = ["Auke Blankwaard <0966307@hr.nl>"]

[tool.poetry.dependencies]
python = "^3.11"
leaflet = "^0.0.3"
django-leaflet = "^0.29.0"
django = "^4.2.5"
django-filter = "^23.3"
daphne = "^4.0.0"
channels = "^4.0.0"
django-rest-framework = "^0.1.0"
mqttasgi = "^1.2.3"
django-bootstrap5 = "^23.3"
psycopg2 = "^2.9.7"
channels-redis = "^4.1.0"
django-pwa = "^1.1.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
